Fix structure, appears to be final fix using css page-break-inside:avoid; to stop wrapping issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,11 +27,13 @@ body {
 #header {
     width: 100dvw;
     text-align: center;
+    padding: 20px;
 }
 
 #footer {
     width: 100dvw;
     text-align: center;
+    padding: 20px;
 }
 
 .card {
